install(FILES cyaddrules.1
        cyclient.1
        cycmd.1
        cyconvertrules.1
        cydb.1
        cydumprules.1
        cyexport.1
        cyimport.1
        cyloadrules.1
        cypasswd.1
        cyphesis.1
        cyphesis-tools.1
        cypython.1
        DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
