noinst_LIBRARIES = libphysics.a

INCLUDES = -I$(top_srcdir)

libphysics_a_SOURCES = Vector3D.cpp Vector3D.h \
                       BBox.cpp BBox.h \
                       Quaternion.cpp Quaternion.h \
                       Collision.cpp Collision.h \
                       Shape.cpp Shape_impl.h Shape.h
