noinst_LIBRARIES = libphysics.a

AM_CPPFLAGS = -I$(top_srcdir)

libphysics_a_SOURCES = Vector3D.cpp Vector3D.h \
                       BBox.cpp BBox.h \
                       Course.cpp Course_impl.h Course.h \
                       Quaternion.cpp Quaternion.h \
                       Collision.cpp Collision.h \
                       Shape.cpp Shape_impl.h Shape.h \
                       Transform.cpp Transform.h \
                       Convert.h
